fixtures/typescript/fallback/should_fail/promise_catch_default.tsx
export async function loadName(fetcher: () => Promise<string>) {
  return fetcher().catch(() => <span>guest</span>);
}
